:rocket: add new features add predict and save model features.

--- a/notebooks/training-validation.ipynb
+++ b/notebooks/training-validation.ipynb
@@ -57,83 +57,83 @@
     "    return x_train, x_valid, y_train, y_valid\n",
     "\n",
     "\n",
-    "  def predict_linear_regression(self, x_train, y_train, x_valid_test, model_name=None):\n",
+    "  def linear_regression(self, x_train, y_train, x_valid_test, predict=False, model_name=None):\n",
     "    model = LinearRegression() # Instance.\n",
     "    model.fit(x_train, y_train) # Training.\n",
-    "    salaries_predicted = pd.DataFrame(model.predict(x_valid), columns=[\"SalaryNormalized\"])\n",
     "    # Save model process.\n",
-    "    if model_name is None:\n",
-    "      return salaries_predicted\n",
-    "    else:\n",
+    "    if model_name is not None:\n",
     "      joblib.dump(\n",
     "        value=model,\n",
     "        filename=f\"../resources/load/{model_name}.pkl\"\n",
     "      )\n",
     "      print(\"Model saved!\")\n",
+    "    # Predict process.\n",
+    "    if predict is True:\n",
+    "      salaries_predicted = pd.DataFrame(model.predict(x_valid_test), columns=[\"SalaryNormalized\"])\n",
     "      return salaries_predicted\n",
     "\n",
     "\n",
-    "  def predict_ridge_regression(self, x_train, y_train, x_valid_test, model_name=None):\n",
+    "  def ridge_regression(self, x_train, y_train, x_valid_test, predict=False, model_name=None):\n",
     "    model = Ridge(alpha=1.0) # Alpha = Learning Rate.\n",
     "    model.fit(x_train, y_train) # Training.\n",
-    "    salaries_predicted = pd.DataFrame(model.predict(x_valid), columns=[\"SalaryNormalized\"])\n",
     "    # Save model process.\n",
-    "    if model_name is None:\n",
-    "      return salaries_predicted\n",
-    "    else:\n",
+    "    if model_name is not None:\n",
     "      joblib.dump(\n",
     "        value=model,\n",
     "        filename=f\"../resources/load/{model_name}.pkl\"\n",
     "      )\n",
     "      print(\"Model saved!\")\n",
+    "    # Predict process.\n",
+    "    if predict is True:\n",
+    "      salaries_predicted = pd.DataFrame(model.predict(x_valid_test), columns=[\"SalaryNormalized\"])\n",
     "      return salaries_predicted\n",
     "\n",
     "\n",
-    "  def predict_lasso_regression(self, x_train, y_train, x_valid_test, model_name=None):\n",
+    "  def lasso_regression(self, x_train, y_train, x_valid_test, predict=False, model_name=None):\n",
     "    model = Lasso(alpha=10, max_iter=1000, tol=0.1)\n",
     "    model.fit(x_train, y_train) # Training.\n",
-    "    salaries_predicted = pd.DataFrame(model.predict(x_valid), columns=[\"SalaryNormalized\"])\n",
     "    # Save model process.\n",
-    "    if model_name is None:\n",
-    "      return salaries_predicted\n",
-    "    else:\n",
+    "    if model_name is not None:\n",
     "      joblib.dump(\n",
     "        value=model,\n",
     "        filename=f\"../resources/load/{model_name}.pkl\"\n",
     "      )\n",
     "      print(\"Model saved!\")\n",
+    "    # Predict process.\n",
+    "    if predict is True:\n",
+    "      salaries_predicted = pd.DataFrame(model.predict(x_valid_test), columns=[\"SalaryNormalized\"])\n",
     "      return salaries_predicted\n",
     "\n",
     "\n",
-    "  def predict_elasticnet_regression(self, x_train, y_train, x_valid_test, model_name=None):\n",
+    "  def elasticnet_regression(self, x_train, y_train, x_valid_test, predict=False, model_name=None):\n",
     "    model = ElasticNet(alpha=1, l1_ratio=0.5, tol=0.3)\n",
     "    model.fit(x_train, y_train) # Training.\n",
-    "    salaries_predicted = pd.DataFrame(model.predict(x_valid), columns=[\"SalaryNormalized\"])\n",
     "    # Save model process.\n",
-    "    if model_name is None:\n",
-    "      return salaries_predicted\n",
-    "    else:\n",
+    "    if model_name is not None:\n",
     "      joblib.dump(\n",
     "        value=model,\n",
     "        filename=f\"../resources/load/{model_name}.pkl\"\n",
     "      )\n",
     "      print(\"Model saved!\")\n",
+    "    # Predict process.\n",
+    "    if predict is True:\n",
+    "      salaries_predicted = pd.DataFrame(model.predict(x_valid_test), columns=[\"SalaryNormalized\"])\n",
     "      return salaries_predicted\n",
     "\n",
     "\n",
-    "  def predict_random_forest_regressor(self, x_train, y_train, x_valid_test, model_name=None):\n",
+    "  def random_forest_regressor(self, x_train, y_train, x_valid_test, predict=False, model_name=None):\n",
     "    model = RandomForestRegressor(n_jobs=-1) # Instance.\n",
     "    model.fit(x_train, np.ravel(y_train)) # Training.\n",
-    "    salaries_predicted = pd.DataFrame(model.predict(x_valid), columns=[\"SalaryNormalized\"])\n",
     "    # Save model process.\n",
-    "    if model_name is None:\n",
-    "      return salaries_predicted\n",
-    "    else:\n",
+    "    if model_name is not None:\n",
     "      joblib.dump(\n",
     "        value=model,\n",
     "        filename=f\"../resources/load/{model_name}.pkl\"\n",
     "      )\n",
     "      print(\"Model saved!\")\n",
+    "    # Predict process.\n",
+    "    if predict is True:\n",
+    "      salaries_predicted = pd.DataFrame(model.predict(x_valid_test), columns=[\"SalaryNormalized\"])\n",
     "      return salaries_predicted\n",
     "\n",
     "\n",
@@ -170,7 +170,7 @@
     "    bestModel = min(dic_models, key=dic_models.get) # Select the best model.\n",
     "\n",
     "    print(\"MAE for Random Forest Regressor: {0}\\nMAE for Linear Regression: {1}\\nMAE for Ridge (L2) Regression: {2}\\nMAE for Lasso (L1) Regression: {3}\\nMAE for Elastic Net (L2 + L1) Regression: {4}\".format(randomForestRegressor_result.mean(), linearRegression_result.mean(), elasticNet_result.mean(), ridge_result.mean(), lasso_result.mean()))\n",
-    "    print(\"The best model is: {0} with MAE value: {1}\".format(bestModel, dic_models[bestModel]))\n"
+    "    print(\"The best model is {0} with MAE value: {1}\".format(bestModel, dic_models[bestModel]))\n"
    ]
   },
   {
@@ -423,12 +423,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE for Random Forest Regressor: 12072.93565079078\n",
-      "MAE for Linear Regression: 12218.599215523192\n",
-      "MAE for Ridge (L2) Regression: 13111.741153975387\n",
-      "MAE for Lasso (L1) Regression: 12218.43993615294\n",
-      "MAE for Elastic Net (L2 + L1) Regression: 12218.764416645457\n",
-      "The best model is: randomForestRegressor with MAE value: 12072.93565079078\n"
+      "MAE for Random Forest Regressor: 12072.912602329781\n",
+      "MAE for Linear Regression: 12218.373015550718\n",
+      "MAE for Ridge (L2) Regression: 13111.752031054906\n",
+      "MAE for Lasso (L1) Regression: 12218.444473322374\n",
+      "MAE for Elastic Net (L2 + L1) Regression: 12218.567775400195\n",
+      "The best model is randomForestRegressor with MAE value: 12072.912602329781\n"
      ]
     }
    ],
@@ -486,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salaries_predicted = training.predict_random_forest_regressor(x_train, y_train, df_title_test_vectorized)"
+    "salaries_predicted = training.random_forest_regressor(x_train, y_train, df_title_test_vectorized, predict=True)"
    ]
   },
   {
@@ -522,68 +522,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>34094.010509</td>\n",
+       "      <td>43230.159189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>31017.623697</td>\n",
+       "      <td>34109.985674</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>40618.417291</td>\n",
+       "      <td>37117.866246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>31017.623697</td>\n",
+       "      <td>37117.866246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>31017.623697</td>\n",
+       "      <td>31022.002281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73426</th>\n",
-       "      <td>40618.417291</td>\n",
+       "      <th>122458</th>\n",
+       "      <td>31022.002281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73427</th>\n",
-       "      <td>28149.871342</td>\n",
+       "      <th>122459</th>\n",
+       "      <td>41961.875903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73428</th>\n",
-       "      <td>31017.623697</td>\n",
+       "      <th>122460</th>\n",
+       "      <td>31022.002281</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73429</th>\n",
-       "      <td>31017.623697</td>\n",
+       "      <th>122461</th>\n",
+       "      <td>18569.458134</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73430</th>\n",
-       "      <td>40618.417291</td>\n",
+       "      <th>122462</th>\n",
+       "      <td>31022.002281</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>73431 rows × 1 columns</p>\n",
+       "<p>122463 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       SalaryNormalized\n",
-       "0          34094.010509\n",
-       "1          31017.623697\n",
-       "2          40618.417291\n",
-       "3          31017.623697\n",
-       "4          31017.623697\n",
-       "...                 ...\n",
-       "73426      40618.417291\n",
-       "73427      28149.871342\n",
-       "73428      31017.623697\n",
-       "73429      31017.623697\n",
-       "73430      40618.417291\n",
+       "        SalaryNormalized\n",
+       "0           43230.159189\n",
+       "1           34109.985674\n",
+       "2           37117.866246\n",
+       "3           37117.866246\n",
+       "4           31022.002281\n",
+       "...                  ...\n",
+       "122458      31022.002281\n",
+       "122459      41961.875903\n",
+       "122460      31022.002281\n",
+       "122461      18569.458134\n",
+       "122462      31022.002281\n",
        "\n",
-       "[73431 rows x 1 columns]"
+       "[122463 rows x 1 columns]"
       ]
      },
      "execution_count": 15,
@@ -606,25 +606,41 @@
     " - As predições desse modelo para os dados de teste.\n",
     "\n",
     "**NOTE:**  \n",
-    "Para salvar o modelo, para cada implementações eu criei um \"mecanismo\", onde só é passar o nome do modelo que ele já vai salvar automaticamente. Se nenhum nome for passado ele apenas vai fazer predições."
+    "Para salvar o modelo, para cada implementações eu criei um \"mecanismo\", onde só é passar o nome *(model_name)* do modelo que ele já vai salvar automaticamente. Lembrando, também que não vamos passar o argumento **\"predict=True\"** e como por default ele é *False*, nenhuma predição será feitas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3ea26b4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved!\n"
+     ]
+    }
+   ],
    "source": [
-    "training.predict_random_forest_regressor(x_train, y_train, df_title_test_vectorized, model_name=\"model-v1\")"
+    "training.random_forest_regressor(x_train, y_train, df_title_test_vectorized, model_name=\"model-v1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "435ef38d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame saved!\n"
+     ]
+    }
+   ],
    "source": [
     "preprocessing.save_to_csv(df=salaries_predicted, df_name=\"test-predict-load-v1\")"
    ]
@@ -659,12 +675,13 @@
     "         - min_df=0.05 (Ignores terms that appear in LESS than 5% of documents)\n",
     "     - Dependente:\n",
     "       - SalaryNormalized (normalizada pelo a Adzuna)\n",
-    "   - *Como Métrica de Avaliação (MAE) tivemos os seguintes resultados (ordenados do menor para o maior):*\n",
-    "     -  MAE for RandomForestRegressor Model: 12037.451130584002\n",
-    "     -  MAE for Linear Regression Model: 12174.533594760238\n",
-    "     -  MAE for Ridge Model: 12174.538439350576\n",
-    "     -  MAE for Lasso Model: 12174.714368247884\n",
-    "     -  MAE for Elastic Net Model: 13057.741326652269"
+    "   - *Como Métrica de Avaliação (MAE) tivemos os seguintes resultados:*\n",
+    "     - MAE for Random Forest Regressor: 12072.912602329781\n",
+    "     - MAE for Linear Regression: 12218.373015550718\n",
+    "     - MAE for Ridge (L2) Regression: 13111.752031054906\n",
+    "     - MAE for Lasso (L1) Regression: 12218.444473322374\n",
+    "     - MAE for Elastic Net (L2 + L1) Regression: 12218.567775400195\n",
+    "     - The best model is randomForestRegressor with MAE value: 12072.912602329781"
    ]
   },
   {
