--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "92d9c9f1",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c55e17c8",
    "metadata": {},
    "outputs": [],
@@ -341,6 +341,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f09b20df",
+   "metadata": {},
+   "source": [
+    " - **See we have a big dataset with:**\n",
+    "   - 244.768 samples.\n",
+    "   - And 12 features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3713ffa3",
    "metadata": {},
    "source": [
@@ -348,12 +358,465 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7c9156a",
+   "cell_type": "markdown",
+   "id": "9f85f5de",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Check data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0e017085",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id                     int64\n",
+       "Title                 object\n",
+       "FullDescription       object\n",
+       "LocationRaw           object\n",
+       "LocationNormalized    object\n",
+       "ContractType          object\n",
+       "ContractTime          object\n",
+       "Company               object\n",
+       "Category              object\n",
+       "SalaryRaw             object\n",
+       "SalaryNormalized       int64\n",
+       "SourceName            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8777a5d",
+   "metadata": {},
+   "source": [
+    " - **See we have \"object\" as most common data type:**\n",
+    "   - This \"objects\" represent texts (information) about the job vacancies.\n",
+    "   - Probably, we will need to apply a data preprocessing to get *insights* from this texts.\n",
+    " - **We have only two numerical features:**\n",
+    "   - **Id:** Job ad identification.\n",
+    "   - **SalaryNormalized:** Target variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab0819d9",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cea8c49",
+   "metadata": {},
+   "source": [
+    "# Check missing data\n",
+    "Here we check missing data by:\n",
+    " - Numerical quantity;\n",
+    " - Percent (%)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a42abc",
+   "metadata": {},
+   "source": [
+    "**Numerical quantity aproach:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "de1c7293",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id                         0\n",
+       "Title                      1\n",
+       "FullDescription            0\n",
+       "LocationRaw                0\n",
+       "LocationNormalized         0\n",
+       "ContractType          179326\n",
+       "ContractTime           63905\n",
+       "Company                32430\n",
+       "Category                   0\n",
+       "SalaryRaw                  0\n",
+       "SalaryNormalized           0\n",
+       "SourceName                 1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quantityMissing = df.isnull().sum()\n",
+    "quantityMissing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8db4527",
+   "metadata": {},
+   "source": [
+    "**Percent (%) approach:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "07b5d86d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id                     0.000000\n",
+       "Title                  0.000409\n",
+       "FullDescription        0.000000\n",
+       "LocationRaw            0.000000\n",
+       "LocationNormalized     0.000000\n",
+       "ContractType          73.263662\n",
+       "ContractTime          26.108397\n",
+       "Company               13.249281\n",
+       "Category               0.000000\n",
+       "SalaryRaw              0.000000\n",
+       "SalaryNormalized       0.000000\n",
+       "SourceName             0.000409\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentMissing = (data_missing / len(df.index)) * 100\n",
+    "percentMissing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ecac122",
+   "metadata": {},
+   "source": [
+    " - See that the features **ContractType**, **ContractTime** and **Company** has more 10% missing data.\n",
+    " - However, another observation is that the feature **ContractType** has more 73% missing data:\n",
+    "   - That's a critical problem, because features with more 60% are almost null in model creation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d64541e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fac6eb6",
+   "metadata": {},
+   "source": [
+    "# Statistical Analysis\n",
+    "\n",
+    "> Finally, let's do a brief **Statistical Analysis** on the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf0509b7",
+   "metadata": {},
+   "source": [
+    "### Statistical Overview\n",
+    "Let's get started with a **Statistical Overview** on the features:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e4f817df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>SalaryNormalized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.447680e+05</td>\n",
+       "      <td>244768.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.970142e+07</td>\n",
+       "      <td>34122.577576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.129813e+06</td>\n",
+       "      <td>17640.543124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.261263e+07</td>\n",
+       "      <td>5000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>6.869550e+07</td>\n",
+       "      <td>21500.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.993700e+07</td>\n",
+       "      <td>30000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7.162606e+07</td>\n",
+       "      <td>42500.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.270524e+07</td>\n",
+       "      <td>200000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Id  SalaryNormalized\n",
+       "count  2.447680e+05     244768.000000\n",
+       "mean   6.970142e+07      34122.577576\n",
+       "std    3.129813e+06      17640.543124\n",
+       "min    1.261263e+07       5000.000000\n",
+       "25%    6.869550e+07      21500.000000\n",
+       "50%    6.993700e+07      30000.000000\n",
+       "75%    7.162606e+07      42500.000000\n",
+       "max    7.270524e+07     200000.000000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c559682",
+   "metadata": {},
+   "source": [
+    " - **First, let's ignore \"Id\" feature and focus only in \"SalaryNormalized\".**\n",
+    " - **SalaryNormalized:**\n",
+    "   - The less salary (annual) was 5.000.\n",
+    "   - The highest salary (annual) was 200.000.\n",
+    "   - The salary (annual) **mean** was 34.122.\n",
+    "   - The salary (annual) **median** was 30.000:\n",
+    "     - Second quartile (Q2) or 50% of data.\n",
+    "     - See that, our **median** is not far from our **mean**.\n",
+    "   - The **Standard Deviation** was 17.640:\n",
+    "     - The **Standard Deviation** represents how far we are from the **mean**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8152e1d",
+   "metadata": {},
+   "source": [
+    "### Getting a moda\n",
+    "However, the **describe()** function doesn't return the **\"mode\"** from the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f1ec85f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    35000\n",
+       "Name: SalaryNormalized, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.SalaryNormalized.mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75e46744",
+   "metadata": {},
+   "source": [
+    "**NOTE:**  \n",
+    "See that, our **mode** is not far from our **mean**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dabc5f0",
+   "metadata": {},
+   "source": [
+    "### Getting the most common salaries\n",
+    "Now, let's use the **class \"Counter\"** to get a top 10 most common salaries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a59947c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(35000, 9178),\n",
+       " (30000, 8319),\n",
+       " (40000, 7688),\n",
+       " (45000, 6735),\n",
+       " (25000, 6309),\n",
+       " (32500, 6215),\n",
+       " (37500, 5756),\n",
+       " (27500, 5544),\n",
+       " (50000, 5424),\n",
+       " (42500, 4555)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(df.SalaryNormalized)\n",
+    "c.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7eb7886",
+   "metadata": {},
+   "source": [
+    "**NOTE:**  \n",
+    " - See that the most common salary was 35.000 with 9.178 samples.\n",
+    " - See also that the most common salary is no far from the mean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ae2ed06",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a293e826",
+   "metadata": {},
+   "source": [
+    "# EDA: First cycle analysis\n",
+    "\n",
+    "> Here we have some important analysis of the **First cycle analysis**.\n",
+    "\n",
+    " - We have a big dataset with:\n",
+    "   - 244.768 samples and 12 features\n",
+    " - Probably, we will need to apply a data preprocessing to get insights from this texts.\n",
+    " - Some feature has many missing data:\n",
+    "   - ContractType, ContractTime and Company has more 10% missing data.\n",
+    "   - We have a critical problem with the feature ContractType (more 73% missing data)\n",
+    " - Statistics from \"SalaryNormalized\" feature:\n",
+    "   - The less salary (annual) was 5.000.\n",
+    "   - The highest salary (annual) was 200.000.\n",
+    "   - The salary (annual) **mean** was 34.122.\n",
+    "   - The salary (annual) **median** was 30.000:\n",
+    "     - Second quartile (Q2) or 50% of data.\n",
+    "     - See that, our **median** is not far from our **mean**.\n",
+    "   - The **mode (most common salary)** was 35.000 (also is not far from the mean)\n",
+    "   - TOP 10 most common salaries are:\n",
+    "     - 35.000 with 9.178 samples;\n",
+    "     - 30.000 with 8.319 samples;\n",
+    "     - 40.000 with 7.688 samples;\n",
+    "     - 45.000 with 6.735 samples;\n",
+    "     - 25.000 with 6.309 samples;\n",
+    "     - 32.500 with 6.215 samples;\n",
+    "     - 37.500 with 5.756 samples;\n",
+    "     - 27.500 with 5.544 samples;\n",
+    "     - 50.000 with 5.424 samples;\n",
+    "     - 42.500 with 4.555 samples.\n",
+    "   - The **Standard Deviation** was 17.640:\n",
+    "     - The **Standard Deviation** represents how far we are from the **mean**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1645b363",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "685d11b1",
+   "metadata": {},
+   "source": [
+    "Ro**drigo** **L**eite da **S**ilva - **drigols**"
+   ]
   }
  ],
  "metadata": {
