Add EDA to the README.md

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "de1c7293",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "07b5d86d",
    "metadata": {},
    "outputs": [
@@ -504,13 +504,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "percentMissing = (data_missing / len(df.index)) * 100\n",
+    "percentMissing = (quantityMissing / len(df.index)) * 100\n",
     "percentMissing"
    ]
   },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "e4f817df",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
        "max    7.270524e+07     200000.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "f1ec85f7",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
        "Name: SalaryNormalized, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "a59947c8",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
        " (42500, 4555)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
