--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -5,7 +5,7 @@
    "id": "0b3e189c",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis\n",
+    "# Exploratory Data Analysis (Data understanding)\n",
     "\n",
     "> The notebook goal is creating an **Exploratory Data Analysis (EDA)**.\n",
     "\n",
@@ -25,44 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc51c81",
-   "metadata": {},
-   "source": [
-    "# Download and Import necessary libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "417007f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To download the necessary libraries remove the comment and run this cell.\n",
-    "#!pip install --upgrade -r ../requirements.txt --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "222d210a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import py7zr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fa32288",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "26b963b0",
    "metadata": {},
    "source": [
@@ -73,11 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a549e7d7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import py7zr\n",
+    "#\n",
     "# For Linux users.\n",
     "# with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
     "#    archive.extractall(path=\"/tmp\")"
@@ -85,11 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "92d9c9f1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import py7zr\n",
+    "\n",
     "# For Windows users.\n",
     "with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
     "    archive.extractall(path=\"C:\\Windows\\Temp\")"
@@ -114,29 +80,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c55e17c8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import pandas as pd\n",
+    "#\n",
     "# For Linux users.\n",
     "# df = pd.read_csv(\"/tmp/Train_rev1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "a0cb82d5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "# For Windows users.\n",
     "df = pd.read_csv(\"C:\\Windows\\Temp\\Train_rev1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7c51b3eb",
    "metadata": {
     "scrolled": true
@@ -294,7 +264,7 @@
        "4              20000 - 30000/annum 20-30K             25000  cv-library.co.uk  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d26fbaee",
    "metadata": {},
    "outputs": [
@@ -367,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0e017085",
    "metadata": {},
    "outputs": [
@@ -389,7 +359,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "de1c7293",
    "metadata": {},
    "outputs": [
@@ -462,7 +432,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "07b5d86d",
    "metadata": {},
    "outputs": [
@@ -504,7 +474,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "e1819f35",
    "metadata": {},
    "outputs": [
@@ -562,7 +532,7 @@
        " ('Surrey', 2397)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "40f72277",
    "metadata": {},
    "outputs": [],
@@ -585,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "282970b0",
    "metadata": {},
    "outputs": [
@@ -643,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "52ccdf32",
    "metadata": {},
    "outputs": [
@@ -653,7 +623,7 @@
        "[(nan, 179326), ('full_time', 57538), ('part_time', 7904)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "144a104d",
    "metadata": {},
    "outputs": [],
@@ -676,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "9b4ce973",
    "metadata": {},
    "outputs": [
@@ -724,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "597a8412",
    "metadata": {},
    "outputs": [
@@ -734,7 +704,7 @@
        "[('permanent', 151521), (nan, 63905), ('contract', 29342)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "e2f16967",
    "metadata": {},
    "outputs": [],
@@ -757,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "b1610358",
    "metadata": {},
    "outputs": [
@@ -805,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "e1407fca",
    "metadata": {},
    "outputs": [],
@@ -817,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "a07b2544",
    "metadata": {
     "scrolled": true
@@ -991,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "e4f817df",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1047,7 @@
        "max    7.270524e+07     200000.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "f1ec85f7",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1095,7 @@
        "Name: SalaryNormalized, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "a59947c8",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1143,7 @@
        " (42500, 4555)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,6 +1385,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "044f4585b8a1c164933773d30e73c15bb4bc9687ac31d60085f99e2c1c0a6795"
+   }
   }
  },
  "nbformat": 4,
