Add note to download the datasets first

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8fd714bc",
+   "metadata": {},
+   "source": [
+    "**NOTE:**  \n",
+    "To apply **Exploratory Data Analysis (Data understanding)** you need first download the datasets **\"Train_rev1.7z\"** and **\"Test_rev1.7z\"** on [Job Salary Prediction](https://www.kaggle.com/competitions/job-salary-prediction/data) and put on */datasets* folder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0b3e189c",
    "metadata": {},
    "source": [
@@ -29,6 +38,7 @@
    "metadata": {},
    "source": [
     "# Decompress dataset\n",
+    "\n",
     " - How the dataset is very big I chose download the compressed data **(.7z)**.\n",
     " - I also choose decompress in a temporary folder **(/temp)**."
    ]
@@ -1384,7 +1394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.0"
   },
   "vscode": {
    "interpreter": {
