--- a/notebooks/modeling-evaluation-v1.ipynb
+++ b/notebooks/modeling-evaluation-v1.ipynb
@@ -5,7 +5,9 @@
    "id": "9b8df903",
    "metadata": {},
    "source": [
-    "# Modeling & Evaluation"
+    "# Modeling & Evaluation (v1)\n",
+    "\n",
+    "> Here, we go create **models** to make predicts and **Evaluation** how well our models learned."
    ]
   },
   {
@@ -142,7 +144,7 @@
      "output_type": "stream",
      "text": [
       "File extracted!\n",
-      "Method runtime: 0:00:06.853006\n"
+      "Method runtime: 0:00:05.883333\n"
      ]
     }
    ],
@@ -162,7 +164,7 @@
      "output_type": "stream",
      "text": [
       "Training data is ready!\n",
-      "Method runtime: 0:00:05.771809\n"
+      "Method runtime: 0:00:04.814837\n"
      ]
     }
    ],
@@ -376,7 +378,7 @@
      "output_type": "stream",
      "text": [
       "Data splitted!\n",
-      "Method runtime: 0:00:00.046032\n"
+      "Method runtime: 0:00:00.031475\n"
      ]
     }
    ],
@@ -733,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostRegressor at 0x2376f077070>"
+       "<catboost.core.CatBoostRegressor at 0x1ee9e853370>"
       ]
      },
      "execution_count": 16,
@@ -1188,6 +1190,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44c22a76",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7a38c9f",
+   "metadata": {},
+   "source": [
+    "# Modeling & Evaluation (v1) - Resume\n",
+    "\n",
+    " - **In this model, we use the features:**\n",
+    "   - **Independent variables:**\n",
+    "     - ContractType\n",
+    "     - ContractTime\n",
+    "   - **Dependent variables:**\n",
+    "     - SalaryNormalized\n",
+    " - **Preprocessing:**\n",
+    "   - We only apply \"fillna = 0\" to missing data.\n",
+    "     - ContractType had 73% missing data.\n",
+    "     - ContractTime had 26% missing data.\n",
+    "   - **NOTE:**\n",
+    "     - We have many missing data, but the focus for now is creating a baseline model (baseline, dummy, PoC, prototype).\n",
+    "     - That's, creates a more simple model possible.\n",
+    " - **Comparison between predicted data and validation data (y_valid):**\n",
+    "   - **Min value:**\n",
+    "     - Salary predicted: 18.477\n",
+    "     - y_valid: 5.000\n",
+    "   - **Max value:**\n",
+    "     - Salary predicted: 36.596\n",
+    "     - y_valid: 200.000\n",
+    "   - **Mean:**\n",
+    "     - Salary predicted: 34.160\n",
+    "     - y_valid: 34.070\n",
+    "   - **Median:**\n",
+    "     - Salary predicted: 35.356\n",
+    "     - y_valid: 30.000\n",
+    "   - **Mode:**\n",
+    "     - Salary predicted: 35.356\n",
+    "     - y_valid: 35.000\n",
+    "   - **Standard Deviation:**\n",
+    "     - Salary predicted: 4.154\n",
+    "     - y_valid: 17.589\n",
+    " - **The result of Evaluation Metric (MAE) was:**\n",
+    "   - 12877.813536658401"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73a363bb",
    "metadata": {},
    "source": [
@@ -1219,7 +1272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.0"
   },
   "vscode": {
    "interpreter": {
