update notebooks to Linux approach

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,15 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8fd714bc",
-   "metadata": {},
-   "source": [
-    "**NOTE:**  \n",
-    "To apply **Exploratory Data Analysis (Data understanding)** you need first download the datasets **\"Train_rev1.7z\"** and **\"Test_rev1.7z\"** on [Job Salary Prediction](https://www.kaggle.com/competitions/job-salary-prediction/data) and put on */datasets* folder."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0b3e189c",
    "metadata": {},
    "source": [
@@ -45,30 +36,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a549e7d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import py7zr\n",
-    "#\n",
-    "# For Linux users.\n",
-    "# with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
-    "#    archive.extractall(path=\"/tmp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "92d9c9f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import py7zr\n",
     "\n",
-    "# For Windows users.\n",
+    "# For Linux users.\n",
     "with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
-    "    archive.extractall(path=\"C:\\Windows\\Temp\")"
+    "    archive.extractall(path=\"/tmp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "92d9c9f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import py7zr\n",
+    "#\n",
+    "# For Windows users.\n",
+    "# with py7zr.SevenZipFile(\"../datasets/Train_rev1.7z\", mode='r') as archive:\n",
+    "#    archive.extractall(path=\"C:\\Windows\\Temp\")"
    ]
   },
   {
@@ -90,33 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c55e17c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pandas as pd\n",
-    "#\n",
-    "# For Linux users.\n",
-    "# df = pd.read_csv(\"/tmp/Train_rev1.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a0cb82d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# For Windows users.\n",
-    "df = pd.read_csv(\"C:\\Windows\\Temp\\Train_rev1.csv\")"
+    "# For Linux users.\n",
+    "df = pd.read_csv(\"/tmp/Train_rev1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "id": "a0cb82d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "#\n",
+    "# For Windows users.\n",
+    "# df = pd.read_csv(\"C:\\Windows\\Temp\\Train_rev1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "7c51b3eb",
    "metadata": {
     "scrolled": true
@@ -274,7 +265,7 @@
        "4              20000 - 30000/annum 20-30K             25000  cv-library.co.uk  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d26fbaee",
    "metadata": {},
    "outputs": [
@@ -347,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "0e017085",
    "metadata": {},
    "outputs": [
@@ -369,7 +360,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "de1c7293",
    "metadata": {},
    "outputs": [
@@ -442,7 +433,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "07b5d86d",
    "metadata": {},
    "outputs": [
@@ -484,7 +475,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "e1819f35",
    "metadata": {},
    "outputs": [
@@ -542,7 +533,7 @@
        " ('Surrey', 2397)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "40f72277",
    "metadata": {},
    "outputs": [],
@@ -565,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "282970b0",
    "metadata": {},
    "outputs": [
@@ -623,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "52ccdf32",
    "metadata": {},
    "outputs": [
@@ -633,7 +624,7 @@
        "[(nan, 179326), ('full_time', 57538), ('part_time', 7904)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "144a104d",
    "metadata": {},
    "outputs": [],
@@ -656,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "9b4ce973",
    "metadata": {},
    "outputs": [
@@ -704,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "597a8412",
    "metadata": {},
    "outputs": [
@@ -714,7 +705,7 @@
        "[('permanent', 151521), (nan, 63905), ('contract', 29342)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "e2f16967",
    "metadata": {},
    "outputs": [],
@@ -737,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "b1610358",
    "metadata": {},
    "outputs": [
@@ -785,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "e1407fca",
    "metadata": {},
    "outputs": [],
@@ -797,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "a07b2544",
    "metadata": {
     "scrolled": true
@@ -971,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "e4f817df",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1048,7 @@
        "max    7.270524e+07     200000.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "f1ec85f7",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1096,7 @@
        "Name: SalaryNormalized, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "a59947c8",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1144,7 @@
        " (42500, 4555)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
