--- a/notebooks/modeling-evaluation-v1.ipynb
+++ b/notebooks/modeling-evaluation-v1.ipynb
@@ -144,7 +144,7 @@
      "output_type": "stream",
      "text": [
       "File extracted!\n",
-      "Method runtime: 0:00:05.883333\n"
+      "Method runtime: 0:00:03.893820\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
      "output_type": "stream",
      "text": [
       "Training data is ready!\n",
-      "Method runtime: 0:00:04.814837\n"
+      "Method runtime: 0:00:02.632955\n"
      ]
     }
    ],
@@ -378,7 +378,7 @@
      "output_type": "stream",
      "text": [
       "Data splitted!\n",
-      "Method runtime: 0:00:00.031475\n"
+      "Method runtime: 0:00:00.020986\n"
      ]
     }
    ],
@@ -735,7 +735,7 @@
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostRegressor at 0x1ee9e853370>"
+       "<catboost.core.CatBoostRegressor at 0x7fc2f6e12e00>"
       ]
      },
      "execution_count": 16,
@@ -822,7 +822,7 @@
    "id": "abd301c8",
    "metadata": {},
    "source": [
-    "# Comparing predicts with \"y_valid\""
+    "# Comparing \"predicts\" with \"y_valid\""
    ]
   },
   {
