docs(jupyter-notebook) Update notebook focus

--- a/jsp/notebooks/eda.ipynb
+++ b/jsp/notebooks/eda.ipynb
@@ -5,18 +5,15 @@
    "id": "f4acf7cf-3e4e-40f4-ba45-f5f735afbbc4",
    "metadata": {},
    "source": [
-    "# [v1] - Exploratory Data Analysis (Data understanding)\n",
+    "# [v1] - Exploratory Data Analysis/EDA (Data understanding)\n",
     "\n",
-    "> The notebook goal is to create Exploratory Data Analysis (EDA).\n",
+    "> The notebook goal is to create a general *Exploratory Data Analysis (EDA)* on all Dataset features.\n",
     "\n",
     "However, no preprocessing or modeling will be created here. Just:\n",
     "\n",
     " - Analysis.\n",
     " - Hypothesis.\n",
-    " - Observations.\n",
-    "\n",
-    "**NOTE:**    \n",
-    "Each time we apply an **Exploratory Data Analysis** here, let's add at the end of the notebook a new version: **v1**, **v2**, **v3**,... **vn**."
+    " - Observations."
    ]
   },
   {
@@ -1127,7 +1124,7 @@
    "id": "7b184df4-a0d3-4ac8-ac1a-8f5f4a57261d",
    "metadata": {},
    "source": [
-    "## [v1] - Analyses of the first \"Exploratory Data Analysis (EDA)\" (Data understanding)"
+    "# [v1] - Exploratory Data Analysis/EDA (Resume)"
    ]
   },
   {
